5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1593_1803.log
== TEST (2019-03-26 11:19:00) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = ((n1*2) + (n2*3) + (n3*4) + (n4*5))/11
print(var)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:25) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = int(((n1*2) + (n2*3) + (n3*4) + (n4*5))/11)
print(var)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:35) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = int(((n1*2) + (n2*3) + (n3*4) + (n4*5))/11)
print(var)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:42) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = int(((n1*2) + (n2*3) + (n3*4) + (n4*5))/11)
print(var)
-- EXECUTION TIME:
0.154557
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
4
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:21:34) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = ((n1*2) + (n2*3) + (n3*4) + (n4*5)/11)
print(var)
-- EXECUTION TIME:
0.130483
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0.9090909090909091
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
36.36363636363637
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
14.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:55) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = ((n1*2) + (n2*3) + (n3*4) + (n4*5)/11)
print(int(var))
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:22:14) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = ((n1*2) + (n2*3) + (n3*4) + (n4*5)/11)
print(int(var))
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:22:38) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = (((n1*2) + (n2*3) + (n3*4) + (n4*5))/11)
print(int(var))
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:27) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = ((n1*2 + n2*3 + n3*4 + n4*5)/11)
print(int(var))
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:42) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 =n2*3 
var3 = n3*4
var4 = n4*5
res = int((var + var2 + var3 + var4)/11)
print(res)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:23) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = int((var + var2 + var3 + var4)/11)
print(res)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:52) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)/11
print(res)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:30:20) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)/11
print(n1, n2, n3, n4)
-- OUTPUT:
0 0 0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:30:53) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)/11
print(var1, var2, var3, var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(var1, var2, var3, var4)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:06) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)/11
print(var, var2, var3, var4)
-- OUTPUT:
0 0 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:22) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)%11
print(res)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:32:28) 
-- CODE:
n = int(input("Digite o numero: "))
n1 = n//1%10
n2 = n//10%10
n3 = n//100%10
n4 = n//1000%10
var = n1*2
var2 = n2*3 
var3 = n3*4
var4 = n4*5
res = (var + var2 + var3 + var4)%11
print(res)
-- EXECUTION TIME:
0.193789
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
